fix img/gif spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -354,3 +354,6 @@ a
     margin: 0
   .column 
     padding: 3rem;
+
+.featured-thumbnail img
+  display: block
